tcw3/designer/tests/bad/const_uninitable.tcwdl
pub comp crate::Comp1 {
    // `field` has no way to initialize
    const field: u32;
}
